--- a/app/src/main/res/layout/fragment_post_view.xml
+++ b/app/src/main/res/layout/fragment_post_view.xml
@@ -28,15 +28,17 @@
             tools:listitem="@layout/post_view_item">
         </androidx.recyclerview.widget.RecyclerView>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-    <de.hdodenhof.circleimageview.CircleImageView
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/Post_Write_Post_Start_CircleImg"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:background="@drawable/ic_baseline_post_add_24"
-        android:layout_alignParentBottom="true"
+        android:backgroundTint="@color/white"
+        app:fabCustomSize="50dp"
+        android:src="@drawable/ic_baseline_post_add_24"
+        android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp">
-    </de.hdodenhof.circleimageview.CircleImageView></RelativeLayout>
+        android:layout_marginTop="30dp">
+    </com.google.android.material.floatingactionbutton.FloatingActionButton></RelativeLayout>
 </FrameLayout>
 </layout>
