--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,8 @@
     <color name="white">#FFFFFFFF</color>
     <color name="Gray">#474646</color>
 
-    <color name="Transparent_Black">#60000000</color>
+    <color name="Transparent_Black40">#40000000</color>
+    <color name="Transparent_Black70">#70000000</color>
+    <color name="Transparent_White">#50FFFFFF</color>
     <color name="Transparent_Green">#804B9A4E</color>
 </resources>
