--- a/app/src/main/res/layout/activity_show_selected_post.xml
+++ b/app/src/main/res/layout/activity_show_selected_post.xml
@@ -16,7 +16,7 @@
     tools:context="com.bigjeon.grumbling.Show_Selected_Post_Activity">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="match_parent"
         android:background="@color/white"
         android:orientation="vertical"
         app:layout_constraintTop_toTopOf="parent">
@@ -29,11 +29,11 @@
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_above="@+id/Selected_Post_Bottom_Container"
                 android:layout_below="@id/Selected_Post_Title_Container">
 
                 <ImageView
                     android:id="@+id/Selected_Post_Background"
+                    android:scaleType="centerCrop"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@color/white"></ImageView>
@@ -89,9 +89,9 @@
             <RelativeLayout
                 android:id="@+id/Selected_Post_Bottom_Container"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="50dp"
                 android:layout_alignParentBottom="true"
-                android:background="@color/Transparent_Black70">
+                android:background="@drawable/gradient_transparentblack_to_blak">
 
                 <TextView
                     android:id="@+id/Selected_Post_Favorite_Count_TV"
