--- a/app/src/main/res/layout/activity_app_main.xml
+++ b/app/src/main/res/layout/activity_app_main.xml
@@ -46,7 +46,8 @@
             android:layout_alignParentRight="true"
             android:layout_centerInParent="true"
             android:layout_marginRight="5dp"
-            android:background="@drawable/ic_launcher_foreground"
+            app:civ_border_width="1dp"
+            app:civ_border_color="@color/Transparent_Black70"
             android:layout_width="40dp"
             android:layout_height="40dp">
         </de.hdodenhof.circleimageview.CircleImageView>
