--- a/app/src/main/res/layout/activity_set_user_profile.xml
+++ b/app/src/main/res/layout/activity_set_user_profile.xml
@@ -11,8 +11,10 @@
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context="com.bigjeon.grumbling.Set_User_Profile_Activity">
     <RelativeLayout
+        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_alignParentTop="true">
@@ -40,9 +42,11 @@
         android:layout_marginTop="200dp"
         android:layout_alignParentTop="true"
         android:layout_centerInParent="true"
-        android:src="@mipmap/ic_launcher"
-        android:layout_width="100dp"
-        android:layout_height="100dp">
+        app:civ_border_width="2dp"
+        app:civ_border_color="@color/Transparent_Black70"
+        android:background="@drawable/ic_baseline_insert_photo_24"
+        android:layout_width="150dp"
+        android:layout_height="150dp">
     </de.hdodenhof.circleimageview.CircleImageView>
     <EditText
         android:id="@+id/User_Name"
