--- a/app/src/main/res/layout/activity_show_selected_post.xml
+++ b/app/src/main/res/layout/activity_show_selected_post.xml
@@ -49,6 +49,8 @@
                     android:id="@+id/Selected_Post_User_Img"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
+                    app:civ_border_color="@color/Transparent_Black70"
+                    app:civ_border_width="1dp"
                     android:layout_alignParentLeft="true"
                     android:layout_centerInParent="true"
                     android:layout_marginLeft="5dp"
