--- a/app/src/main/res/layout/fragment_setting_.xml
+++ b/app/src/main/res/layout/fragment_setting_.xml
@@ -37,6 +37,8 @@
                 android:id="@+id/Setting_Fragment_My_Profile_Img_Civ"
                 android:layout_alignParentLeft="true"
                 android:src="@drawable/ic_launcher_background"
+                app:civ_border_color="@color/Transparent_Black70"
+                app:civ_border_width="2dp"
                 android:layout_marginLeft="10dp"
                 android:layout_width="100dp"
                 android:layout_height="match_parent">
