--- a/app/src/main/res/layout/post_view_item.xml
+++ b/app/src/main/res/layout/post_view_item.xml
@@ -35,6 +35,8 @@
                 android:src="@mipmap/ic_launcher"
                 android:layout_centerInParent="true"
                 android:layout_alignParentLeft="true"
+                app:civ_border_width="1dp"
+                app:civ_border_color="@color/Transparent_Black70"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginTop="5dp"
@@ -46,7 +48,6 @@
                 android:textSize="10dp"
                 android:textStyle="bold"
                 android:textColor="@color/black"
-                android:layout_centerInParent="true"
                 android:layout_toRightOf="@+id/Post_View_User_Img"
                 android:layout_marginTop="15dp"
                 android:layout_marginLeft="5dp"
