--- a/app/src/main/res/layout/activity_user_profile_view.xml
+++ b/app/src/main/res/layout/activity_user_profile_view.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -6,15 +7,13 @@
         </import>
         <variable
             name="post_setting_binding"
-            type="com.bigjeon.grumbling.fragments.Setting_Fragment" />
+            type="com.bigjeon.grumbling.User_Profile_View_activity" />
     </data>
-<FrameLayout
-    android:background="@color/white"
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.bigjeon.grumbling.fragments.Setting_Fragment">
-
+    tools:context="com.bigjeon.grumbling.User_Profile_View_activity">
     <LinearLayout
         android:orientation="vertical"
         android:layout_marginTop="5dp"
@@ -33,48 +32,49 @@
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="0dp">
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/Setting_Fragment_My_Profile_Img_Civ"
-                android:layout_alignParentLeft="true"
-                android:src="@drawable/ic_launcher_background"
-                app:civ_border_color="@color/Transparent_Black70"
-                app:civ_border_width="2dp"
-                android:layout_marginLeft="10dp"
-                android:layout_width="100dp"
-                android:layout_height="match_parent">
-            </de.hdodenhof.circleimageview.CircleImageView>
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/Setting_Fragment_My_Profile_Img_Civ"
+                    android:layout_alignParentLeft="true"
+                    android:src="@drawable/ic_launcher_background"
+                    app:civ_border_color="@color/Transparent_Black70"
+                    app:civ_border_width="2dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_width="100dp"
+                    android:layout_height="match_parent">
+                </de.hdodenhof.circleimageview.CircleImageView>
                 <LinearLayout
                     android:orientation="vertical"
                     android:layout_toRightOf="@+id/Setting_Fragment_My_Profile_Img_Civ"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
-                <TextView
-                    android:layout_weight="1"
-                    android:id="@+id/Setting_Fragment_My_Name_Tv"
-                    android:text="Big_Jeon"
-                    android:gravity="center"
-                    android:textSize="20dp"
-                    android:layout_toRightOf="@+id/Setting_Fragment_My_Profile_Img_Civ"
-                    android:layout_centerInParent="true"
-                    android:textColor="@color/black"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                </TextView>
-                <TextView
-                    android:layout_weight="1"
-                    android:id="@+id/Setting_Fragment_My_Uid_Tv"
-                    android:text="#UID"
-                    android:gravity="center"
-                    android:layout_below="@+id/Setting_Fragment_My_Name_Tv"
-                    android:layout_toRightOf="@+id/Setting_Fragment_My_Profile_Img_Civ"
-                    android:textSize="15dp"
-                    android:textColor="@color/Transparent_Black40"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                </TextView>
+                    <TextView
+                        android:layout_weight="1"
+                        android:id="@+id/Setting_Fragment_My_Name_Tv"
+                        android:text="Big_Jeon"
+                        android:gravity="center"
+                        android:textSize="20dp"
+                        android:layout_toRightOf="@+id/Setting_Fragment_My_Profile_Img_Civ"
+                        android:layout_centerInParent="true"
+                        android:textColor="@color/black"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                    </TextView>
+                    <TextView
+                        android:layout_weight="1"
+                        android:id="@+id/Setting_Fragment_My_Uid_Tv"
+                        android:text="#UID"
+                        android:gravity="center"
+                        android:layout_below="@+id/Setting_Fragment_My_Name_Tv"
+                        android:layout_toRightOf="@+id/Setting_Fragment_My_Profile_Img_Civ"
+                        android:textSize="15dp"
+                        android:textColor="@color/Transparent_Black40"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                    </TextView>
                 </LinearLayout>
             </RelativeLayout>
             <LinearLayout
+                android:id="@+id/Show_User_Profile_Btns_Container"
                 android:layout_weight="2"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
@@ -114,5 +114,5 @@
             </androidx.recyclerview.widget.RecyclerView>
         </RelativeLayout>
     </LinearLayout>
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
