--- a/app/src/main/res/layout/activity_set_user_profile.xml
+++ b/app/src/main/res/layout/activity_set_user_profile.xml
@@ -11,9 +11,11 @@
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="10dp"
     android:background="@color/white"
     tools:context="com.bigjeon.grumbling.Set_User_Profile_Activity">
     <RelativeLayout
+        android:id="@+id/App_Title_Container"
         android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -36,35 +38,85 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
         </de.hdodenhof.circleimageview.CircleImageView>
-    </RelativeLayout>
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/User_Img"
-        android:layout_marginTop="200dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerInParent="true"
-        app:civ_border_width="2dp"
-        app:civ_border_color="@color/Transparent_Black70"
-        android:background="@drawable/ic_baseline_insert_photo_24"
-        android:layout_width="150dp"
-        android:layout_height="150dp">
-    </de.hdodenhof.circleimageview.CircleImageView>
-    <EditText
-        android:id="@+id/User_Name"
-        android:hint="사용하실 이름을 입력하세요."
-        android:textSize="15dp"
-        android:layout_below="@id/User_Img"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="50dp"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content">
-    </EditText>
 
-    <Button
-        android:id="@+id/Complete_Btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/User_Name"
-        android:layout_toEndOf="@+id/User_Name"
-        android:text="완료"></Button>
+        <Button
+            android:id="@+id/Complete_Btn"
+            android:textStyle="bold"
+            android:background="@android:color/transparent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:text="완료"></Button>
+    </RelativeLayout>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_below="@id/App_Title_Container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <RelativeLayout
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/User_Img"
+                android:layout_marginTop="100dp"
+                android:layout_centerInParent="true"
+                app:civ_border_width="2dp"
+                app:civ_border_color="@color/Transparent_Black70"
+                android:src="@drawable/user_profile_default_img"
+                android:layout_width="150dp"
+                android:layout_height="150dp">
+            </de.hdodenhof.circleimageview.CircleImageView>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_below="@+id/User_Img"
+                android:layout_centerInParent="true"
+                android:layout_marginTop="10dp"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content">
+                <Button
+                    android:id="@+id/Set_User_Img_Default_Btn"
+                    android:text="기본 프로필"
+                    android:textSize="10dp"
+                    android:textColor="@color/black"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent">
+                </Button>
+                <Button
+                    android:id="@+id/Set_User_Img_from_Gallery_Btn"
+                    android:text="갤러리"
+                    android:textSize="10dp"
+                    android:textColor="@color/black"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent">
+                </Button>
+            </LinearLayout>
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <TextView
+                android:text="이름 : "
+                android:layout_toLeftOf="@+id/User_Name"
+                android:textSize="20dp"
+                android:textColor="@color/black"
+                android:layout_alignBaseline="@id/User_Name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+            </TextView>
+            <EditText
+                android:id="@+id/User_Name"
+                android:hint="사용하실 이름을 입력하세요."
+                android:textSize="15dp"
+                android:layout_centerInParent="true"
+                android:layout_alignParentTop="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+            </EditText>
+        </RelativeLayout>
+    </LinearLayout>
 </RelativeLayout>
 </layout>
