--- a/app/src/main/res/layout/color_item.xml
+++ b/app/src/main/res/layout/color_item.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="5dp"
     android:layout_marginRight="5dp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/Text_Color_Circle_IMV"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:background="@color/black">
+        android:id="@+id/Text_Color_Circle_CIV"
+        app:civ_border_width="2dp"
+        app:civ_border_color="@color/purple_200"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@color/black">
     </de.hdodenhof.circleimageview.CircleImageView>
 
 </RelativeLayout>
