--- a/app/src/main/res/layout/my_chatting_item.xml
+++ b/app/src/main/res/layout/my_chatting_item.xml
@@ -1,35 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="horizontal"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="5dp">
-
     <RelativeLayout
+        android:layout_weight="5"
+        android:background="@android:color/transparent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_weight="4"
         android:id="@+id/Chatting_Text_Container"
         android:layout_marginTop="5dp"
         android:layout_alignParentRight="true"
         android:layout_margin="10dp"
-        android:layout_width="wrap_content"
+        android:layout_width="350dp"
         android:layout_height="wrap_content">
+        <RelativeLayout
+            android:id="@+id/Chat_Container"
+            android:background="@color/Transparent_Black50"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
     <TextView
         android:id="@+id/Chatting_Text_TV"
         android:padding="10dp"
         android:gravity="center"
         android:text="내용입력창입니다."
         android:textColor="@color/black"
+        android:layout_alignParentRight="true"
         android:textSize="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
     </TextView>
+            <TextView
+                android:text="입력시간"
+                android:id="@+id/Chatting_WriteDate_TV"
+                android:textSize="7dp"
+                android:layout_below="@+id/Chatting_Text_TV"
+                android:layout_toLeftOf="@id/Chatting_Text_TV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+            </TextView>
     </RelativeLayout>
-    <TextView
-        android:text="입력시간"
-        android:id="@+id/Chatting_WriteDate_TV"
-        android:layout_toLeftOf="@+id/Chatting_Text_Container"
-        android:layout_alignBottom="@id/Chatting_Text_Container"
-        android:textSize="7dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-    </TextView>
-</RelativeLayout>
+    </RelativeLayout>
+</LinearLayout>
+</layout>
