--- a/app/src/main/res/layout/other_chatting_item.xml
+++ b/app/src/main/res/layout/other_chatting_item.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+<layout>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="horizontal"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="5dp">
+    <RelativeLayout
+        android:background="@color/purple_200"
+        android:layout_weight="4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/Chatting_User_Img_CIV"
         android:src="@drawable/app_logo"
@@ -30,7 +37,7 @@
         android:layout_marginTop="5dp"
         android:layout_toRightOf="@+id/Chatting_User_Img_CIV"
         android:layout_below="@id/Chatting_User_Name_TV"
-        android:layout_margin="10dp"
+        android:layout_margin="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <TextView
@@ -43,14 +50,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
         </TextView>
+        <TextView
+            android:text="입력시간"
+            android:id="@+id/Chatting_WriteDate_TV"
+            android:layout_toRightOf="@+id/Chatting_Text_TV"
+            android:layout_below="@id/Chatting_Text_TV"
+            android:textSize="7dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        </TextView>
     </RelativeLayout>
-    <TextView
-        android:text="입력시간"
-        android:id="@+id/Chatting_WriteDate_TV"
-        android:layout_toRightOf="@+id/Chatting_Text_Container"
-        android:layout_alignBottom="@id/Chatting_Text_Container"
-        android:textSize="7dp"
-        android:layout_width="wrap_content"
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_weight="6"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    </TextView>
-</RelativeLayout>
+    </RelativeLayout>
+</LinearLayout>
+</layout>
